err/dsopz.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dsopz'...
Compiling './lib/python3.5/site-packages/dsopz/console.py'...
***   File "./lib/python3.5/site-packages/dsopz/console.py", line 89
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dsopz/http.py'...
***   File "./lib/python3.5/site-packages/dsopz/http.py", line 80
    print json.dumps(obj, indent=True)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dsopz/mapper.py'...
***   File "./lib/python3.5/site-packages/dsopz/mapper.py", line 1
    print ent
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dsopz/oauth.py'...
***   File "./lib/python3.5/site-packages/dsopz/oauth.py", line 53
    print get_token()
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dsopz/oauth_gce.py'...
***   File "./lib/python3.5/site-packages/dsopz/oauth_gce.py", line 23
    print 'Logged in'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dsopz/oauth_installed.py'...
***   File "./lib/python3.5/site-packages/dsopz/oauth_installed.py", line 33
    print 'Browser:'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dsopz/oauth_local.py'...
***   File "./lib/python3.5/site-packages/dsopz/oauth_local.py", line 40
    print 'Logged in'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dsopz/oauth_serviceaccount.py'...
***   File "./lib/python3.5/site-packages/dsopz/oauth_serviceaccount.py", line 57
    print 'Logged in'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dsopz/processor.py'...
***   File "./lib/python3.5/site-packages/dsopz/processor.py", line 72
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dsopz/processor_indexed.py'...
***   File "./lib/python3.5/site-packages/dsopz/processor_indexed.py", line 40
    print json.dumps(ent)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dsopz/processor_mapper.py'...
***   File "./lib/python3.5/site-packages/dsopz/processor_mapper.py", line 12
    print json.dumps(k)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dsopz/processor_sql.py'...
***   File "./lib/python3.5/site-packages/dsopz/processor_sql.py", line 38
    print self.sql % tuple(values)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dsopz/processor_update.py'...
***   File "./lib/python3.5/site-packages/dsopz/processor_update.py", line 20
    print json.dumps(ent)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dsopz/reader.py'...
***   File "./lib/python3.5/site-packages/dsopz/reader.py", line 71
    print string
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dsopz-1.2.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
